# eludris

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Derailed.example.toml  Dockerfile  Eludris.example.toml  LICENSE  README.md  autodoc.py  autodoc.sh  docker-compose.next.yml  docker-compose.override.yml  docker-compose.prebuilt.yml  docker-compose.yml  plan.md  test.py
todel/: Cargo.toml  README.md  sqlx-data.json
todel/.sqlx/: query-00bbcc571f2fd3aeaf5c5de2834cdbf02292713e3ea94867390d4d1bf74f8ff5.json  query-03d630f8e045f9f017c730c77c681bfc258f8999a911dde8fcc21e4cd6156c60.json  query-03e28a9f5a6351a107b8c86184c52c8544163b3568cf8a573e8cb9b7c09cc514.json  query-04c35aa5e08c677162f0dc23c110362130ff51d1d9d5d68682a6ae6b97f87ce1.json  query-0774c43f68ef9a7c1e88ebac472289860517dbec5029fa3928f461359decb790.json  query-0b777b0c29764df5e73b73053922c54ac93fb8985c1a916f62edb53424ec9fde.json  query-0fe91bff032fc213d6ee46fdce3be95141544832749080b336f944b4eaff4bb1.json  query-11b34c2e3194bb909debefc0bd1a9b8f78a2bfc316e742b37c960b951459d0f2.json  query-1748b03c9ab7e72e3750e4b575f2ed2c55f84a2351e786d06bc2e46b1842ecd9.json  query-182efc0f54b5bdd50a51053f0d4a443253ac003944faa2ec883cfa88227104b2.json  query-193a4c49180dcab5622e4962d38cf824e008e8f719baf1151a0772f1eb9a9cfb.json  query-1a1b203765576f0276284027c92f0611b2272741ed1f3e7bfa7ed1885ccd0f3d.json  query-1cd352d30d227ce84e4413b4fa11e85c7747828090cebcb3292d2864225b8b50.json  query-23224902101faf9c5ffebc2c5793bcb2cab9a3182d4c2f36cd77998577938cd7.json  query-26011e3bc1bea695e2156c02209bff07a186ff3b51a13d7e1c2f134f30dd21ac.json  query-29e6cc796749ce920d5222d5d4cddce08d75876623214eba3a7861baf0a21344.json  query-2c5b636592fb8d270ae1651f932158c913169313e0cd43cd36c54b8ad8e2385d.json  query-2e5b04c0069fa040d6da24c20d4c3bf0ac805e2cd854d85cfa794bfde04c3248.json  query-30413c75463d1a94976818977047b7f44a626a4a183258b2b5ac57012bfa7902.json  query-312d26d2f4a167e2b164720ceeffd7172099d743dbfd40b1f1c7f8ea84a1a363.json  query-31dd64d046c62140b8af91bb50ba785d4a8e518bf7fcd91a00e29d678d08a297.json  query-328916d9094af7904d345d9bcf02f3a3391fbdb5cc213851f6388662470f3a7c.json  query-34d9f175c75aa685a6dff3bbf2deccffed00d1159ca8838e5c048e37a4c13dfb.json  query-397bdd22d166884d46a6f7804dbb02f51814a8f53dbeed2afa9d1ee511f50410.json  query-3bd07bfc352fe3487c5159dbb5b64f0d35f23403708c0ba2b561b3ad40d53395.json  query-3c2a41ee5fd6e994d02db53c05538cbe83df3f017a89c1db20a5b0663f60ac8f.json  query-3d2988594906e38e25da28e679fa3aadbf21627d2301d500639aacdc3fb42c93.json  query-3dbce0ac9d6cf2ce44913b6946204c1b09d374067ed04f88e2bef117bfe77370.json  query-3f0e399a127b23e1dbadc2c76b84213655b90eb9226a93863d83ae3f7b519d4f.json  query-3f87e064ceea68c06c0b22c0621f02f5f60e5e828d37ba3345fb682d50e13d96.json  query-4170bc57dbf90c0bcb1ee8099d76b3e5ccfc4afb5834ba6293f94944b8d6557d.json  query-465ca573b832ee370dc87d47c644e6999f349c86def94c59bfeda35b20b89baf.json  query-49b5c7037e91470976cd32ecfe1923ca5d0c73654d0b7bacb961f7a7d5cf70d1.json  query-4a18c49f13560e1a5ea180569673c9db2caeb7c21131f5c32f6073c524a9f64c.json  query-4bc6cd68b455182ff98d2c784c4f8633378bf763c948ac7c13cf2248272a21a4.json  query-52585d5c2ed19ff6ebe2f7d6c0b257faffc8968c738991728a97a320f30b033d.json  query-5269f13bcb68c1379f66bba0e58a3b38681942166ca7a38ac94d5be010a6e9a2.json  query-542115684392cfd8026f8d060d91a718d0ae059d8dd8a998db93b3529552658a.json  query-5534e5066d7156af39c469e6446838e7939a7628f08194e3a285aa27142085e1.json  query-55e902694ca20bb998eef16419d530a1afcb9c9a7652613c0ca32eaf35a43fda.json  (+64 more)
todel/src/: bitflag.rs  lib.rs
todel/src/conf/: effis.rs  (+6 more)
(+221 files in other folders)
